[package]
name = "lets_find_up"
license = "MIT"
version = "0.0.3"
edition = "2021"
description = "Find a file or directory by walking up parent directories."
repository = "https://github.com/jayvdb/lets_find_up"
keywords = ["find-up", "find_up", "findup"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
sugar_path = "0.0.11"
